assets/css/style.css
header {
    display: flex;
    justify-content: space-between;
}

.view-high-scores {
    color: #b64fe9;
    cursor: pointer;
}

.view-high-scores, .timer {
    margin: 15px 15px;
}

main {
    margin-top: 80px;
}

main section {
    text-align: center;
    width: 75%;
    margin: 50px auto;
}

.title-question {
    font-size: 25px; 
}

button {
    background-color: #5d0aa2;
    color: white;
    padding: 15px 32px;
    font-size: 16px;
    margin: 5px 10px;
    border-radius: 10px;
}

